# CG

./: README.md
hw1/: 1.fsh  1.vsh  2.vsh  3.fsh  3.vsh  Readme.md  Readme.md~  glwidget.cpp  glwidget.h  hw1.pro  main.cpp  window.cpp
hw2/: 1.fsh  1.vsh  2.fsh  2.vsh  CMakeLists.txt  GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  Readme.md  Readme.md~  glview.cpp  glview.h  glview.ui  glwidget.cpp  glwidget.h  hw1  hw2.pro  main.cpp  mainwindow.cpp  mainwindow.h  widget.cpp  widget.h  window.h
hw3/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  MainWidget.cpp  MainWidget.h  circlegeometry.cpp  circlegeometry.h  cylindergeometry.cpp  cylindergeometry.h  fshader.glsl  geometry.h  main.cpp  quadgeometry.cpp  quadgeometry.h  spheregeometry.cpp  spheregeometry.h  textures.qrc  vshader.glsl
